edit post: java_grid

--- a/_posts/2022-05-04-java_grid.md
+++ b/_posts/2022-05-04-java_grid.md
@@ -59,9 +59,10 @@ public class hw1 extends Frame{
 ```
 
 ## 為何如此？
-原來問題出在第 22 行，`frm.add(new Button(), i);`。<br>
-當 add 有兩個參數時，後面的 `int` 將會表示顯示的位置。（你可以在[這裡](https://docs.oracle.com/javase/7/docs/api/java/awt/Container.html#add(java.awt.Component))找到官方文件的解說）<br>
-例如我將它改為 `frm.add(new Button(Integer.toString(i)), i + 1);`，並在頁面頂端預留了三個 label 的空位，會顯示這樣的結果： <br>
+原來問題出在第 21 行，`frm.add(new Button(), i);`。<br>
+當 add 有兩個參數時，後面的 `int` 將會表示顯示的位置。（[你可以在這裡找到官方文件的解說](https://docs.oracle.com/javase/7/docs/api/java/awt/Container.html#add(java.awt.Component))）
+<br><br>
+例如我將它改為 `frm.add(new Button(Integer.toString(i)), i + 1);`，會顯示這樣的結果： <br>
 ![](java1-2.PNG){: w="350" h="350"}
 _所有 button 從「第一格」（左上角的灰格為第0格）開始依序往下排列_
 
@@ -144,7 +145,8 @@ D:\Java\hw1 ❯ javac .\hw1.java -encoding utf-8
 
 ## 為何如此？
 這世界上沒有一個叫做 `setText()`，且傳入了一個 String 當參數的 function。<br>
-設定 Button 中的文字應用 `setLabel()`，而不是 `setText()`。<br>
+設定 Button 中的文字應用 `setLabel()`，而不是 `setText()`。
+<br><br>
 不過確實還有其他 object 是用 `setText()`，這點需要多注意⚠ <br>
 
 ## 修改成果
@@ -175,7 +177,8 @@ _可以正確顯示圈和叉_
 
 # 成品
 經過一點波折，終於完成了小小的圈圈叉叉遊戲啦～<br>
-這是我第一次用視窗來設計程式，能夠和這種 GUI 互動的感覺真的成就感爆棚！<br>
+這是我第一次用視窗來設計程式，能夠和這種 GUI 互動的感覺真的成就感爆棚！
+<br><br>
 這裡是成果 demo: <br>
 ![](javaDemo2.gif){: w="1000" h="350"}
 _終於像個圈圈叉叉了！_
