PNG to webp and ttf to woff

--- a/_posts/2022-05-04-java_grid.md
+++ b/_posts/2022-05-04-java_grid.md
@@ -25,7 +25,7 @@ img_path: ../../assets/img/posts/java_grid
 我還在嘗試怎麼使用 grid 時，寫了以下的 Code，我先設定並 `add` label 後，利用迴圈跑出9個按鈕。<br>
 理論上 Label 應出現在按鈕上方，但他卻出現在底下。
 
-![java1](java1-1.PNG){: w="350" h="350"}
+![java1](java1-1.webp){: w="350" h="350"}
 _Label 出現在 button 後面_
 
 完整的 code 在這：
@@ -63,7 +63,7 @@ public class hw1 extends Frame{
 當 add 有兩個參數時，後面的 `int` 將會表示顯示的位置。（[你可以在這裡找到官方文件的解說](https://docs.oracle.com/javase/7/docs/api/java/awt/Container.html#add(java.awt.Component))）
 <br><br>
 例如我將它改為 `frm.add(new Button(Integer.toString(i)), i + 1);`，會顯示這樣的結果： <br>
-![](java1-2.PNG){: w="350" h="350"}
+![](java1-2.webp){: w="350" h="350"}
 _所有 button 從「第一格」（左上角的灰格為第0格）開始依序往下排列_
 
 ## 修改成果
@@ -107,7 +107,7 @@ public class hw1 extends Frame{
 }
 ```
 即會產生以下結果：<br>
-![](java1-3.PNG){: w="350" h="350"}
+![](java1-3.webp){: w="350" h="350"}
 _順利預留空間且按鈕正確排列_
 
 ***
@@ -117,6 +117,7 @@ _順利預留空間且按鈕正確排列_
 
 ## 問題描述
 我想要實現「當按鈕被點擊時，按鈕中的文字顯示為 O」，所以將按鈕都加進 `ActionListener(frm)` 中，如下：<br>
+
 ```java
 for(int i = 0; i < 9; i++){
             btn[i] = new Button();
@@ -125,6 +126,7 @@ for(int i = 0; i < 9; i++){
         }
 ```
 我也新增了一個 function： <br>
+
 ```java
 public void actionPerformed(ActionEvent e){
         Button actionBtn = (Button) e.getSource();
@@ -132,7 +134,9 @@ public void actionPerformed(ActionEvent e){
         
     }
 ```
+
 他卻一直顯示這個問題：<br>
+
 ```
 D:\Java\hw1 ❯ javac .\hw1.java -encoding utf-8
 .\hw1.java:52: error: cannot find symbol
@@ -151,6 +155,7 @@ D:\Java\hw1 ❯ javac .\hw1.java -encoding utf-8
 
 ## 修改成果
 按下按鈕後要觸發的 function 長這樣：
+
 ```java
 public void actionPerformed(ActionEvent e){
         Button actionBtn = (Button) e.getSource();
@@ -169,6 +174,7 @@ public void actionPerformed(ActionEvent e){
         } 
     }
 ```
+
 最後的成果：<br>
 ![](javaDemo.gif){: w="1000" h="350"}
 _可以正確顯示圈和叉_
@@ -183,6 +189,7 @@ _可以正確顯示圈和叉_
 ![](javaDemo2.gif){: w="1000" h="350"}
 _終於像個圈圈叉叉了！_
 這裡是完整的程式碼：<br>
+
 ```java
 import java.awt.*;
 import java.awt.event.*;
